log/build_2024-05-02_17-15-25/my_robot_controller/stdout_stderr.log
running egg_info
writing ../../build/my_robot_controller/my_robot_controller.egg-info/PKG-INFO
writing dependency_links to ../../build/my_robot_controller/my_robot_controller.egg-info/dependency_links.txt
writing entry points to ../../build/my_robot_controller/my_robot_controller.egg-info/entry_points.txt
writing requirements to ../../build/my_robot_controller/my_robot_controller.egg-info/requires.txt
writing top-level names to ../../build/my_robot_controller/my_robot_controller.egg-info/top_level.txt
reading manifest file '../../build/my_robot_controller/my_robot_controller.egg-info/SOURCES.txt'
writing manifest file '../../build/my_robot_controller/my_robot_controller.egg-info/SOURCES.txt'
running build
running build_py
copying my_robot_controller/motor_control.py -> /home/tomersi2/ros2_ws/build/my_robot_controller/build/lib/my_robot_controller
copying my_robot_controller/__init__.py -> /home/tomersi2/ros2_ws/build/my_robot_controller/build/lib/my_robot_controller
copying my_robot_controller/robot_state_publisher.py -> /home/tomersi2/ros2_ws/build/my_robot_controller/build/lib/my_robot_controller
running install
running install_lib
copying /home/tomersi2/ros2_ws/build/my_robot_controller/build/lib/my_robot_controller/robot_state_publisher.py -> /home/tomersi2/ros2_ws/install/my_robot_controller/lib/python3.10/site-packages/my_robot_controller
byte-compiling /home/tomersi2/ros2_ws/install/my_robot_controller/lib/python3.10/site-packages/my_robot_controller/robot_state_publisher.py to robot_state_publisher.cpython-310.pyc
  File "/home/tomersi2/ros2_ws/install/my_robot_controller/lib/python3.10/site-packages/my_robot_controller/robot_state_publisher.py", line 15
    urdf_file_path = /home/tomersi2/ros2_ws/src/my_robot_controller/description/my_robot.urdf
                     ^
SyntaxError: invalid syntax

running install_data
copying resource/my_robot_controller -> /home/tomersi2/ros2_ws/install/my_robot_controller/share/ament_index/resource_index/packages
copying package.xml -> /home/tomersi2/ros2_ws/install/my_robot_controller/share/my_robot_controller
copying launch/start_robot.launch.py -> /home/tomersi2/ros2_ws/install/my_robot_controller/share/my_robot_controller/launch/
running install_egg_info
removing '/home/tomersi2/ros2_ws/install/my_robot_controller/lib/python3.10/site-packages/my_robot_controller-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/my_robot_controller/my_robot_controller.egg-info to /home/tomersi2/ros2_ws/install/my_robot_controller/lib/python3.10/site-packages/my_robot_controller-0.0.0-py3.10.egg-info
running install_scripts
Installing motor_control script to /home/tomersi2/ros2_ws/install/my_robot_controller/lib/my_robot_controller
Installing robot_state_publisher_node script to /home/tomersi2/ros2_ws/install/my_robot_controller/lib/my_robot_controller
writing list of installed files to '/home/tomersi2/ros2_ws/build/my_robot_controller/install.log'
